syntax = "proto3";

package commands.inventory.v1;

import "models/v1/block.proto";

// Command to add a specific block to the inventory.
message AddToInventory {
  models.v1.BlockColor color = 1;
}

// Command that starts a new inventory run.
message ProcessNewShipment {
  string shipment_id = 1;

  // Places in the delivery grid that are filled
  // with a block (3x3 grid).
  repeated bool blocks = 2;
}
