syntax = "proto3";

package events.sensors.v1;

import "models/v1/block.proto";

// Object detected on top of the NFC reader.
// If an object has no NFC tag, it will not be detected and thus
// must be sent to the color detector.
message NFCObjectDeteced {}

// If an object has been detected, it will be removed afterwards
// and sorted to the green inventory.
message NFCObjectRemoved {}

// The distance sensor on the right (near the picker robot)
// has detected an object in front.
message RightObjectDeteced {}

// The distance sensor on the right (near the picker robot)
// has detected that the object in front has been removed.
message RightObjectRemoved {}

// The distance sensor on the left (near the colors robot)
// has detected an object in front.
message LeftObjectDeteced {}

// The distance sensor on the left (near the colors robot)
// has detected that the object in front has been removed.
message LeftObjectRemoved {}

// The button was pressed that states that the area
// is cleared and the robots may start working.
message AreaClearButtonPressed {}

// The robot with the color sensor has put a block
// on the color detector and the color has been detected.
message ColorDetected {
  models.v1.BlockColor color = 1;
}
